Added Navigation Drawer

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,12 @@
             android:screenOrientation="portrait"
             android:theme="@style/Theme.DrYogeshBatra.NoActionBar">
 
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
         </activity>
         <activity
             android:name=".UserProfileActivity"
@@ -42,16 +48,14 @@
             android:exported="true"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.DrYogeshBatra.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
 
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true" />
+            android:exported="true">
+
+
+        </activity>
     </application>
 
 </manifest>
