--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,9 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.3"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.20"
-        classpath 'com.google.gms:google-services:4.3.10'
+        classpath 'com.google.gms:google-services:4.3.13'
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.1.0"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.5.0"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
