--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,11 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth-ktx'
     implementation 'com.google.firebase:firebase-storage-ktx:20.0.0'
 
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+
+
+    implementation 'com.google.code.gson:gson:2.8.8'
+
     // Navigation
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.0'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.0'
@@ -67,6 +72,9 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.0'
 
     implementation platform('com.google.firebase:firebase-bom:30.2.0')
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
 
     /*// ViewModel and LiveData
     // implementation "androidx.lifecycle:lifecycle-extensions:$version_lifecycle_extensions"
@@ -80,4 +88,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     implementation 'com.google.android.material:material:1.5.0'
+
+    implementation 'io.github.medyo:android-about-page:2.0.0'
+
 }
