--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.dryogeshbatra">
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,21 +12,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DrYogeshBatra">
         <activity
+            android:name=".UserProfileActivity"
+            android:exported="false" />
+        <activity
             android:name=".DashboardActivity"
             android:exported="true"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.DrYogeshBatra.NoActionBar">
 
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-
         </activity>
-        <activity
-            android:name=".UserProfileActivity"
-            android:exported="false" />
         <activity
             android:name=".SettingsActivity"
             android:exported="false" />
@@ -32,7 +28,7 @@
             android:name=".RegisterActivity"
             android:exported="false"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.DrYogeshBatra.NoActionBar"/>
+            android:theme="@style/Theme.DrYogeshBatra.NoActionBar" />
         <activity
             android:name=".ForgotPasswordActivity"
             android:exported="false" />
@@ -42,20 +38,24 @@
         <activity
             android:name=".LoginActivity"
             android:exported="true"
-            android:theme="@style/Theme.DrYogeshBatra.NoActionBar" />
+            android:theme="@style/Theme.DrYogeshBatra.NoActionBar" >
+
+        </activity>
         <activity
             android:name=".SplashActivity"
             android:exported="true"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.DrYogeshBatra.NoActionBar">
 
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true">
-
-
-        </activity>
+            android:exported="true"></activity>
     </application>
 
 </manifest>
