--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,19 +5,19 @@ plugins {
     id "androidx.navigation.safeargs"
     id 'com.google.gms.google-services'
     id 'kotlin-android-extensions'
+    id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
 
-    buildFeatures {
-        viewBinding true
-    }
+
 
     compileSdk 31
 
     defaultConfig {
         applicationId "com.example.dryogeshbatra"
-        minSdk 21
+        minSdk 24
         targetSdk 31
         versionCode 1
         versionName "1.0"
@@ -27,7 +27,8 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -35,10 +36,14 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
     kotlinOptions {
         jvmTarget = '1.8'
     }
 
+    kapt {
+        correctErrorTypes = true
+    }
     buildFeatures{
         viewBinding = true
     }
@@ -91,6 +96,41 @@ dependencies {
 
     implementation 'com.google.android.material:material:1.5.0'
 
-    implementation 'io.github.medyo:android-about-page:2.0.0'
+
+
+    //Agora
+    implementation 'com.github.agorabuilder:native-full-sdk:3.7.0'
+
+
+
+
+
+    // Coroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
+
+    // Coroutine Lifecycle Scopes
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0"
+
+    //retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+
+    //gson
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    //razorpay
+    implementation('com.razorpay:checkout:1.6.20')
+
+   /* androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
+    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
+
+    implementation "androidx.compose.ui:ui:$compose_version"
+    implementation "androidx.compose.material:material:$compose_version"
+    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"*/
+
+
+    implementation("com.google.dagger:hilt-android:2.44")
+    kapt("com.google.dagger:hilt-android-compiler:2.44")
+
 
 }
