--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
 
+
+
     ext {
         // Versions for all the dependencies we plan to use. It's particularly useful for kotlin and
         // navigation where the versions of the plugin needs to be the same as the version of the
         // library defined in the app Gradle file
+        compose_version = '1.0.1'
         version_android_gradle_plugin = "4.0.1"
         version_core = "1.3.1"
         version_constraint_layout = "2.0.0-rc1"
@@ -29,10 +32,17 @@ buildscript {
         classpath 'com.google.gms:google-services:4.3.13'
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.1.0"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.5.0"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:2.40.5"
+
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
+}
+
+plugins {
+    id("com.google.dagger.hilt.android") version "2.44" apply false
+    id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
 }
 
 task clean(type: Delete) {
